Basic requirement completed

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 </head>
 <body>
 	<div id="wrapper">
-		<h1>Grid stuff</h1>
+		<div id="head">
+			<h1>Grid stuff</h1>
+			<button onclick="replay()">New</button>
+		</div>
 		<div id="grid">
-			<div class="sq"></div> 
+			<div class="row">
+				
+			</div> 
 		</div>
 	</div>
 </body>
