Opacity half completed

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 	<div id="wrapper">
 		<div id="head">
 			<h1>Grid stuff</h1>
-			<button onclick="replay()">New</button>
+			<button onclick="replay()">New Grid</button>
+			<button onclick="fresh()">Clear</button>
+			
 		</div>
 		<div id="grid">
-			<div class="row">
-				
-			</div> 
 		</div>
 	</div>
 </body>
